<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ru.anstag.app.database.MainActivity"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_name" />
    <EditText
        android:id="@+id/nameEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_phone" />

    <EditText
        android:id="@+id/phoneEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_phone"/>

    <Button
        android:id="@+id/insertBtn"
        android:text="@string/insert_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/showBtn"
        android:text="@string/show_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/deleteBtn"
        android:text="@string/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            xmlns:android="http://schemas.android.com/apk/res/android">

            <TextView
                android:id="@+id/showData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

</LinearLayout>
